--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=personal_dev_6514_sutani_yuto
+spring.application.name=CtoCshop
 # DB接続情報
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql:personal_dev_6514_sutani_yuto
