--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=CtoCshop
 # DB接続情報
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql:personal_dev_6514_sutani_yuto
+spring.datasource.url=jdbc:postgresql:CtoCshop
 spring.datasource.username=student
 spring.datasource.password=himitu
 # SQL実行出力
