--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=CtoCshop
 # DB接続情報
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql:spring_sample
-spring.datasource.username=student
+spring.datasource.username=postgres
 spring.datasource.password=himitu
 # SQL実行出力
 spring.jpa.show-sql=true
